@@ -1,5 +1,13 @@
 2010-07-31 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-icontext.c (is_candidate_for_capabilities):
+	Implement the function.
+
+	* src/core/na-selected-info.c:
+	* src/core/na-selected-info.h (na_selected_info_is_executable,
+	na_selected_info_is_owner, na_selected_info_is_readable,
+	na_selected_info_is_writable): New function.
+
 	* src/core/na-icontext.c (is_candidate_for_folders):
 	Implement the function.
 
